--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,16 @@
   /*Color mode HSL(hue, saturation, lightness)*/
   --hue: 0;
   --sat: 0%;
-  --title-color: hsl(var(--hue), var(--sat), 20%);
-  --title-color-dark: hsl(var(--hue), var(--sat), 0%);
-  --text-color: hsl(var(--hue), var(--sat), 46%);
-  --body-color: hsl(var(--hue), var(--sat), 98%);
-  --container-color: #fff;
+  --title-color: hsl(154, 38%, 51%);
+  --title-color-dark: hsl(154 84% 70%);
+  --text-color: hsl(154 84% 70%);
+  --body-color: hsl(154 50% 5%);
+  --text-shadow: 0 0 3px hsl(154 84% 70%);
+  /* hsl(var(--hue), var(--sat), 98%); */
+  --container-color: hsl(163, 54%, 3%);
 
   /*========== Font and typography ==========*/
-  --body-font: "Poppins", sans-serif;
+  --body-font: monospace, sans-serif;
 
   /*.5rem = 8px | 1rem = 16px ...*/
   --big-font-size: 3.5rem;
@@ -61,6 +63,47 @@
     --small-font-size: 0.813rem;
     --smaller-font-size: 0.75rem;
   }
+}
+
+#glare {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  /* ensure the effect doesn't cover the text */
+  background: radial-gradient(hsl(154 5% 15%) 0%, hsl(154 50% 5%) 70%);
+}
+
+@keyframes lines {
+  0% {
+    background-position: 0px 0px
+  }
+
+  50% {
+    background-position: 0px 0px
+  }
+
+  51% {
+    background-position: 0px 2px
+  }
+
+  100% {
+    background-position: 0px 2px
+  }
+}
+
+#interlaced {
+  position: fixed;
+  background: repeating-linear-gradient(transparent 0px 1px, hsl(154 0% 0%/.2) 3px 4px);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  pointer-events: none;
+  animation: lines 0.06666666s linear infinite;
 }
 
 /*=============== BASE ===============*/
@@ -202,8 +245,7 @@ img {
   }
 }
 
-@media screen and (max-width: 576px) {
-}
+@media screen and (max-width: 576px) {}
 
 /* For small devices */
 @media screen and (max-width: 350px) {
